# second_step

./: .dockerignore  .gitignore  Dockerfile  check_db.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: config.py  database.py  dependencies.py  main.py  models.py  paginator.py  provider_client.py  repositories.py  schemas.py  usecases.py
src/api/: db_check.py  events.py  health.py  seats.py  sync.py  tickets.py
src/background/: sync_worker.py
tests/: mock_provider_client.py  test_paginator.py  test_provider_client.py
